examples/docker-registry/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
  labels:
    kubernetes.io/metadata.name: docker-registry
spec:
