examples/docker-registry/manifests/imageswap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imageswap-system
  labels:
    app: imageswap
    resource: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: imageswap
  namespace: imageswap-system
  labels:
    app: imageswap
    resource: service
spec:
  ports:
  - name: https
    port: 443
    targetPort: 5000
  selector:
    app: imageswap
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageswap
  namespace: imageswap-system
  labels:
    app: imageswap
    resource: deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: imageswap
  template:
    metadata:
      labels:
        app: imageswap
    spec:
      serviceAccountName: imageswap-sa
      securityContext:
        runAsUser: 1898
        runAsGroup: 1898
      containers:
      - name: imageswap
        image: thewebroot/imageswap:v1.5.3
        ports:
        - containerPort: 5000
        command: ["gunicorn", "imageswap:app", "--config=config.py"]
        imagePullPolicy: Always
        securityContext:
            allowPrivilegeEscalation: false
        resources:
          limits:
            cpu: "500m"
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        volumeMounts:
          - name: imageswap-tls
            mountPath: /tls
          - name: imageswap-maps
            mountPath: /app/maps
      volumes:
        - name: imageswap-mwc
          configMap:
              name: imageswap-mwc-template
              items:
              - key: imageswap-mwc
                path: imageswap-mwc.yaml
        - name: imageswap-maps
          configMap:
              name: imageswap-maps
              items:
              - key: maps
                path: imageswap-maps.conf
        - name: imageswap-tls
          emptyDir: {}
