examples/docker-registry/manifests/registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-registry-pod
  namespace: docker-registry
  labels:
    app: registry
spec:
  containers:
  - name: registry
    image: registry:2.6.2
    volumeMounts:
    - name: registry-vol
      mountPath: "/var/lib/registry"
  volumes:
    - name: registry-vol
      persistentVolumeClaim:
        claimName: docker-registry-pvc
    - name: auth-vol
      secret:
        secretName: docker-registry-auth
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: docker-registry
  namespace: docker-registry
spec:
  ingressClassName: nginx
  rules:
  - host: registry.cnoe.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
